--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -31,6 +31,7 @@
     "@radix-ui/react-switch": "^1.2.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "deepmerge-ts": "^7.1.5",
     "lucide-react": "^0.468.0",
     "tailwind-merge": "^3.3.0"
   },
