feat: add fuse.js dependency to shared package
- Included fuse.js version 7.1.0 as a dependency in the shared package's package.json.
- Updated pnpm-lock.yaml to reflect the addition of fuse.js, ensuring proper version resolution and integrity checks.

--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -23,6 +23,7 @@
     "postinstall": "pnpm ready"
   },
   "dependencies": {
+    "fuse.js": "^7.1.0",
     "react-error-boundary": "^6.0.0"
   },
   "devDependencies": {
